# raffle-smart-contracts

./: .gitmodules  README.md
foundry-raffle/: .env.example  .gitignore  README.md  foundry.toml
foundry-raffle/script/: 01_DeployRaffle.s.sol  02_EnterRaffle.s.sol
foundry-raffle/src/: Raffle.sol  VRFv2PlusWrapperConsumer.sol
vyper-raffle/: .env.example  .gitignore  README.md  pyproject.toml
vyper-raffle/contracts/: Raffle.vy
vyper-raffle/interfaces/: VrfV2PlusWrapper.vyi
vyper-raffle/libraries/: VRFV2PlusClient.vy
vyper-raffle/scripts/: deploy_raffle.py  enter_raffle.py  verify_raffle.py
vyper-raffle/scripts/helpers/: __init__.py
vyper-raffle/tests/mocks/: VRFRouter.vy  VRFWrapper.vy
vyper-raffle/tests/units/: conftest.py  test_raffle.py  test_raffle_upkeep.py  test_raffle_with_vrf.py
